--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,11 @@ path = "src/main.rs"
 [dependencies]
 log = "0.4.17"
 simple_logger = "4.1.0"
-clap = { version = "^4.1.4", features = ["derive"] }
+clap = { version = "^4.4.8", features = ["derive", ] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.7.0"
 lazy_static = "1.4.0"
 base64 = "0.21.0"
 time = "0.3.20"
+csv = "1.3.0"
